# mailgrep

./: Cargo.toml  Dockerfile
tests/: http_server.rs  smtp_server.rs
