[package]
name = "mailgrep"
version = "0.10.1"
authors = ["Atmaram Naik <naik_atmaram@yahoo.com>","Pieter van den Ham <pevandenham@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mail catcher with advance rest endpoints"
readme = "README.md"
repository = "https://github.com/atmnk/mailgrep"
keywords = ["email", "mailcatcher", "smtp", "mta"]
categories = ["development-tools"]

[[bin]]
name = "mailgrep"
path = "src/bin/mailgrep.rs"

[dependencies]
tokio = { version = "1", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
env_logger = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
regex = "1.5.4"
mailparse = "0.13"
memchr = "2.4.0"
routerify = "3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "tokio1-native-tls"] }

[profile.release]
lto = true
